  * release numbers follow "Semantic Versioning" https://semver.org


-------------------------------------------------------------------------------
??/??/?? IAlibay, HeetVekariya, marinegor, lilyminium, RMeli,
         ljwoods2, aditya292002, pstaerk, PicoCentauri, BFedder,
         tyler.je.reddy, SampurnaM, leonwehrhan, kainszs, orionarcher,
         yuxuanzhuang, PythonFZ, laksh-krishna-sharma, orbeckst, MattTDavies

 * 2.8.0

Fixes
 * Catch higher dimensional indexing in GroupBase & ComponentBase (Issue #4647)
 * Do not raise an Error reading H5MD files with datasets like
   `observables/<particle>/<property>` (part of Issue #4598, PR #4615)
 * Fix failure in double-serialization of TextIOPicklable file reader.
   (Issue #3723, PR #3722)
 * Fix failure to preserve modification of coordinates after serialization,
   e.g. with transformations
   (Issue #4633, PR #3722)
 * Fix PSFParser error when encoutering string-like resids
 * (Issue #2053, Issue #4189 PR #4582)
 * Fix `MDAnalysis.analysis.align.AlignTraj` not accepting writer kwargs
   (Issue #4564, PR #4565)
 * Fix #4259 via removing argument `parallelizable` of `NoJump` transformation.
 * Fix doctest errors of analysis/pca.py related to rounding issues 
   (Issue #3925, PR #4377)
 * Convert openmm Quantity to raw value for KE and PE in OpenMMSimulationReader.
 * Atomname methods can handle empty groups (Issue #2879, PR #4529)
 * Add support for TPR files produced by Gromacs 2024.1 (PR #4523)
 * Remove mutable data from ``progressbar_kwargs`` argument in ``AnalysisBase.run()``
   (PR #4459)
 * Fix ChainReader `__repr__()` method when sub-reader is MemoryReader 
   (Issue #3349, PR #4407)
 * Fix bug in PCA preventing use of `frames=...` syntax (PR #4423)
 * Fix `analysis/diffusionmap.py` iteration through trajectory to iteration
   over `self._sliced_trajectory`, hence supporting
   `DistanceMatrix.run(frames=...)` (PR #4433)
 * Fix doctest errors of lib/picklable_file_io.py (Issue #3925, PR #4371)