@@ -8,6 +8,7 @@ from MDAnalysisTests.analysis.test_base import (
 )
 from MDAnalysis.analysis.rms import RMSD, RMSF
 from MDAnalysis.lib.util import is_installed
+from MDAnalysis.analysis.gnm import GNMAnalysis
 
 
 def params_for_cls(cls, exclude: list[str] = None):
@@ -86,4 +87,9 @@ def client_RMSD(request):
 
 @pytest.fixture(scope='module', params=params_for_cls(RMSF))
 def client_RMSF(request):
+    return request.param
+
+
+@pytest.fixture(scope='module', params=params_for_cls(GNMAnalysis))
+def client_GNMAnalysis(request):
     return request.param
